make docs for 2.0 and change name on logo

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -51,7 +51,7 @@
     text-align: left;
     position: relative;
     min-width: 65%;
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: var(--INTERNAL-MAIN-TEXT-color);
     font-family: 'Roboto', 'Work Sans', 'Helvetica', 'Tahoma', 'Geneva', 'Arial', sans-serif;
     font-weight: 200;
@@ -71,5 +71,5 @@
       <path shape-rendering="optimizeQuality" d="M51.765 106.809a15.336 15.382 18 0 1 9.832 19.369 15.336 15.382 18 0 1-19.339 9.89 15.336 15.382 18 0 1-9.832-19.369 15.336 15.382 18 0 1 19.339-9.89zM138.78 85.83a15.382 15.336 48 0 1-21.69-1.17 15.382 15.336 48 0 1 1.105-21.693 15.382 15.336 48 0 1 21.69 1.169 15.382 15.336 48 0 1-1.104 21.693z"/>
     </svg>
   </div>
-  <span>1SPIN</span>
+  <span>SpinPay</span>
 </a>
