--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,18 +1,37 @@
 <style>
+
   a#R-logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+
+    -webkit-transition: -webkit-transform ease-in-out 0.5s;
+
+    transition: -webkit-transform ease-in-out 0.5s;
+
+    -o-transition: transform ease-in-out 0.5s;
 
     transition: transform ease-in-out 0.5s;
+
+    transition: transform ease-in-out 0.5s, -webkit-transform ease-in-out 0.5s;
   }
 
   a#R-logo:hover {
-    transform: scale(105%);
+    -webkit-transform: scale(105%);
+        -ms-transform: scale(105%);
+            transform: scale(105%);
   }
 
   a#R-logo #full-logo {
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     width: 30%;
     position: relative;
     shape-rendering: geometricPrecision;
@@ -30,32 +49,11 @@
   }
 
   a#R-logo #full-logo #spheres {
-    animation: rotateAnimation 6s linear infinite;
-    transform-origin: center;
-  }
-
-  @keyframes rotateAnimation {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  a#R-logo #full-logo #circle path {
-    fill: #09beff !important;
-  }
-
-  a#R-logo span {
-    text-align: left;
-    position: relative;
-    min-width: 65%;
-    font-size: 2.5rem;
-    color: var(--INTERNAL-MAIN-TEXT-color);
-    font-family: 'Roboto', 'Work Sans', 'Helvetica', 'Tahoma', 'Geneva', 'Arial', sans-serif;
-    font-weight: 200;
-    padding: 0;
+    -webkit-animation: rotateAnimation 6s linear infinite;
+            animation: rotateAnimation 6s linear infinite;
+    -webkit-transform-origin: center;
+        -ms-transform-origin: center;
+            transform-origin: center;
   }
 </style>
 <a id="R-logo" href="{{ partial "relLangPrettyUglyURL.hugo" (dict "to" .Site.Home) }}">
