--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,37 +1,18 @@
 <style>
-
   a#R-logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-
-    -webkit-transition: -webkit-transform ease-in-out 0.5s;
-
-    transition: -webkit-transform ease-in-out 0.5s;
-
-    -o-transition: transform ease-in-out 0.5s;
+    align-items: center;
+    justify-content: center;
 
     transition: transform ease-in-out 0.5s;
-
-    transition: transform ease-in-out 0.5s, -webkit-transform ease-in-out 0.5s;
   }
 
   a#R-logo:hover {
-    -webkit-transform: scale(105%);
-        -ms-transform: scale(105%);
-            transform: scale(105%);
+    transform: scale(105%);
   }
 
   a#R-logo #full-logo {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    flex: 1;
     width: 30%;
     position: relative;
     shape-rendering: geometricPrecision;
@@ -54,6 +35,43 @@
     -webkit-transform-origin: center;
         -ms-transform-origin: center;
             transform-origin: center;
+  }
+ 
+  @-webkit-keyframes rotateAnimation {
+    from {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes rotateAnimation {
+    from {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg);
+    }
+  }
+
+  a#R-logo #full-logo #circle path {
+    fill: #09beff !important;
+  }
+
+  a#R-logo span {
+    text-align: left;
+    position: relative;
+    min-width: 65%;
+    font-size: 2.5rem;
+    color: var(--INTERNAL-MAIN-TEXT-color);
+    font-family: 'Roboto', 'Work Sans', 'Helvetica', 'Tahoma', 'Geneva', 'Arial', sans-serif;
+    font-weight: 200;
+    padding: 0;
   }
 </style>
 <a id="R-logo" href="{{ partial "relLangPrettyUglyURL.hugo" (dict "to" .Site.Home) }}">
